# vex

./: .env.example  .gitignore  LICENSE  README.md  install.sh  install_windows.bat  pyproject.toml  requirements.txt  vex.bat  vex.ps1  vex.py
vex/: __main__.py  cli.py  crawler.py
vex/core/: __init__.py  ai_engine.py  base_detector.py  report_generator.py  response_analyzer.py  stealth.py
vex/detectors/: __init__.py  bac.py  idor.py  path_traversal.py  rce.py  sqli.py  ssrf.py  xss.py  xxe.py
vex/payloads/: __init__.py  loader.py  nuclei_patterns.py  sqli.py  ssrf.py  subdomains.py  waf.py  xss.py
