[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vex-scanner"
version = "0.3.0"
description = "VEX - Vulnerability Explorer: Automated vulnerability scanning tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "VEX Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ai = ["openai>=1.0.0"]

[project.scripts]
vex = "vex.__main__:main"
