[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vex-scanner"
version = "0.5.0"
description = "VEX - Vulnerability Explorer: Advanced web vulnerability scanner with WAF bypass, stealth engine, and AI-powered detection."
readme = "README.md"
authors = [
    {name = "VEX Team", email = "vex@opencode.ai"},
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Security :: Vulnerability Assessment",
    "Topic :: Internet :: WWW/HTTP",
]
keywords = ["security", "vulnerability-scanner", "pentesting", "web-security", "sql-injection", "xss", "waf-bypass", "bugbounty"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
]

[project.urls]
homepage = "https://github.com/username/vex"
repository = "https://github.com/username/vex"
documentation = "https://github.com/username/vex#readme"
changelog = "https://github.com/username/vex/releases"

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
]

[project.scripts]
vex = "vex.__main__:main"

[tool.setuptools.packages.find]
include = ["vex*"]
